--- a/com.assurant.inc.codelabs/pom.xml
+++ b/com.assurant.inc.codelabs/pom.xml
@@ -16,6 +16,7 @@
 		<springVersion>3.1.3.RELEASE</springVersion>
 		<cglibVersion>2.2.2</cglibVersion>
 		<aspectJVersion>1.7.0</aspectJVersion>
+		<cargo.version>1.3.1</cargo.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -206,6 +207,74 @@
 			<artifactId>guava</artifactId>
 			<version>13.0.1</version>
 		</dependency>
+		<!-- cargo tomcat -->
+		<dependency>
+			<groupId>org.codehaus.cargo</groupId>
+			<artifactId>cargo-core-container-tomcat</artifactId>
+			<version>${cargo.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>jdom</groupId>
+					<artifactId>jdom</artifactId>
+				</exclusion>
+				<exclusion>
+					<artifactId>dom4j</artifactId>
+					<groupId>dom4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>ant</artifactId>
+					<groupId>org.apache.ant</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>ant-launcher</artifactId>
+					<groupId>org.apache.ant</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						geronimo-j2ee-deployment_1.1_spec
+					</artifactId>
+					<groupId>org.apache.geronimo.specs</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>commons-discovery</artifactId>
+					<groupId>commons-discovery</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<artifactId>commons-discovery</artifactId>
+			<groupId>commons-discovery</groupId>
+			<version>0.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.8.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+	<groupId>jaxen</groupId>
+	<artifactId>jaxen</artifactId>
+	<version>1.1.4</version>
+	<scope>test</scope>
+</dependency>
+            
+            
 	</dependencies>
 	<build>
 		<finalName>codelabs</finalName>
