--- a/com.assurant.inc.codelabs/pom.xml
+++ b/com.assurant.inc.codelabs/pom.xml
@@ -6,17 +6,17 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
-		<jerseyVersion>2.2</jerseyVersion>
+		<jerseyVersion>2.6</jerseyVersion>
 		<jacksonVersion>1.9.9</jacksonVersion>
 		<logbackVersion>1.0.13</logbackVersion>
-		<mongojavadriverVersion>2.11.2</mongojavadriverVersion>
+		<mongojavadriverVersion>2.12.0-rc1</mongojavadriverVersion>
 		<slf4jVersion>1.7.2</slf4jVersion>
 		<jodaTimeVersion>2.1</jodaTimeVersion>
 		<commonslangVersion>3.1</commonslangVersion>
-		<springVersion>3.2.3.RELEASE</springVersion>
+		<springVersion>4.0.1.RELEASE</springVersion>
 		<cglibVersion>2.2.2</cglibVersion>
 		<aspectJVersion>1.7.0</aspectJVersion>
-		<cargo.version>1.3.1</cargo.version>
+		<cargo.version>1.4.7</cargo.version>
 		<junitVersion>4.11</junitVersion>
 	</properties>
 	<dependencies>
@@ -46,10 +46,18 @@
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-moxy</artifactId>
 			<version>${jerseyVersion}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>
+						org.eclipse.persistence.moxy
+					</artifactId>
+					<groupId>org.eclipse.persistence</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- <dependency> <groupId>org.glassfish.jersey</groupId> <artifactId>jersey-bom</artifactId> 
 			<version>${jerseyVersion}</version> </dependency> -->
-		<dependency>
+		 <dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-spring3</artifactId>
 			<version>${jerseyVersion}</version>
@@ -59,6 +67,14 @@
 						jersey-container-servlet-core
 					</artifactId>
 					<groupId>org.glassfish.jersey.containers</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-beans</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-core</artifactId>
+					<groupId>org.springframework</groupId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -79,7 +95,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
+			<artifactId>jersey-media-moxy</artifactId>
 			<version>${jerseyVersion}</version>
 			<exclusions>
 				<exclusion>
@@ -165,7 +181,7 @@
 			<artifactId>jersey-container-grizzly2-http</artifactId>
 			<version>${jerseyVersion}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
 			<version>${jacksonVersion}</version>
@@ -179,8 +195,8 @@
 					<groupId>org.codehaus.jackson</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		 <dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>${jacksonVersion}</version>
@@ -189,12 +205,12 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-xc</artifactId>
 			<version>${jacksonVersion}</version>
-		</dependency>
+		</dependency> 
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
-			<version>1.2.3.RELEASE</version>
+			<version>1.4.0.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-tx</artifactId>
@@ -251,11 +267,31 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>${springVersion}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-beans</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-core</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${springVersion}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-beans</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-core</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- <dependency> <groupId>com.sun.jersey.contribs</groupId> <artifactId>jersey-spring</artifactId> 
 			<version>${jerseyVersion}</version> <exclusions> <exclusion> <groupId>org.springframework</groupId> 
@@ -367,6 +403,16 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.11.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>4.0.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.0.1.RELEASE</version>
 		</dependency>
 	</dependencies>
 	<build>
